--- a/index.html
+++ b/index.html
@@ -1,46 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <!-- Primary Meta Tags -->
+        <title>Landwind – Responsive Tailwind Landing Page Template</title>
+        <meta name="title" content="Landwind – Responsive Tailwind Landing Page Template">
+        <meta name="description" content="Landwind is a sleek, professional landing page template built with Tailwind CSS and Flowbite. Featuring dark/light mode, pricing cards, team showcase, and responsive design.">
+        <meta name="keywords" content="Tailwind, Flowbite, Landing Page, Responsive Website, Dark Mode, Pricing Cards, HTML Template, Business Showcase, Web Design, UI/UX">
+        <meta name="author" content="Ahmed Maher Algohary">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://ahmed-maher77.github.io/Landwind___landing-page-template-built-with-TailwindCSS-and-Flowbite/">
+        <meta property="og:title" content="Landwind – Responsive Tailwind Landing Page Template">
+        <meta property="og:description" content="Landwind is a sleek, professional landing page template built with Tailwind CSS and Flowbite. Showcasing your company's products, team, and services with modern design.">
+        <meta property="og:image" content="/favicon-32x32.png">
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="https://ahmed-maher77.github.io/Landwind___landing-page-template-built-with-TailwindCSS-and-Flowbite/">
+        <meta property="twitter:title" content="Landwind – Responsive Tailwind Landing Page Template">
+        <meta property="twitter:description" content="Landwind is a modern, responsive landing page template using Tailwind CSS and Flowbite. Clean design, dark/light mode, and smooth scrolling.">
+        <meta property="twitter:image" content="/favicon-32x32.png">
+        <!-- Google Fonts -->
 		<link
 			rel="canonical"
-			href="https://https://demo.themesberg.com/landwind/"
-		/>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Landwind - Analytics Platform powered by AI</title>
-
-		<!-- Meta SEO -->
-		<meta name="title" content="Landwind - Tailwind CSS Landing Page" />
-		<meta
-			name="description"
-			content="Get started with a free and open-source landing page built with Tailwind CSS and the Flowbite component library."
+			href="https://ahmed-maher77.github.io/Landwind___landing-page-template-built-with-TailwindCSS-and-Flowbite/"
 		/>
 		<meta name="robots" content="index, follow" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="language" content="English" />
-		<meta name="author" content="Themesberg" />
-
-		<!-- Social media share -->
-		<meta property="og:title" content="Landwind - Tailwind CSS Landing Page" />
-		<meta property="og:site_name" content="Themesberg" />
-		<meta
-			property="og:url"
-			content="https://https://demo.themesberg.com/landwind/"
-		/>
-		<meta
-			property="og:description"
-			content="Get started with a free and open-source landing page for Tailwind CSS built with the Flowbite component library featuring dark mode, hero sections, pricing cards, and more."
-		/>
-		<meta property="og:type" content="" />
-		<meta
-			property="og:image"
-			content="https://themesberg.s3.us-east-2.amazonaws.com/public/github/landwind/og-image.png"
-		/>
-		<meta name="twitter:card" content="summary" />
-		<meta name="twitter:site" content="@themesberg" />
-		<meta name="twitter:creator" content="@themesberg" />
-
 		<!-- Favicon -->
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
